PA_Education/TestMenifest/force-app/main/default/objects/Career__c/Career__c.object-meta.xml
<CustomObject>
    <label>Career</label>
    <nameField>
        <label>회사 명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>