PA_Education/TestMenifest/force-app/main/default/objects/Career__c/fields/CareerDescription__c.field-meta.xml
<CustomField>
    <fullName>CareerDescription__c</fullName>
    <label>업무내용</label>
    <type>TextArea</type>
</CustomField>