PA_Education/TestMenifest/force-app/main/default/objects/Career__c/fields/CareerExitDate__c.field-meta.xml
<CustomField>
    <fullName>CareerExitDate__c</fullName>
    <label>퇴사일자</label>
    <type>Date</type>
</CustomField>