PA_Education/TestMenifest/force-app/main/default/objects/Career__c/fields/CareerJoinDate__c.field-meta.xml
<CustomField>
    <fullName>CareerJoinDate__c</fullName>
    <label>입사일자</label>
    <type>Date</type>
</CustomField>