PA_Education/TestMenifest/force-app/main/default/objects/Career__c/fields/CareerPosition__c.field-meta.xml
<CustomField>
    <fullName>CareerPosition__c</fullName>
    <inlineHelpText>퇴사 시점 직급 입력</inlineHelpText>
    <label>직급</label>
    <length>10</length>
    <type>Text</type>
</CustomField>