PA_Education/TestMenifest/force-app/main/default/objects/Career__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>사원 명</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Re_Career</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>