PA_Education/TestMenifest/force-app/main/default/objects/Career__c/fields/fm_WorkPeriode__c.field-meta.xml
<CustomField>
    <fullName>fm_WorkPeriode__c</fullName>
    <formula>TEXT(CareerJoinDate__c) &amp; &quot; ~ &quot; &amp; TEXT(CareerExitDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>근무 기간</label>
    <type>Text</type>
</CustomField>